--- a/client-side/package.json
+++ b/client-side/package.json
@@ -10,6 +10,7 @@
     "pokedex-promise-v2": "^3.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
