--- a/client-side/package.json
+++ b/client-side/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.1",
     "pokedex-promise-v2": "^3.2.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-is": "^16.8.6",
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
