--- a/client-side/package.json
+++ b/client-side/package.json
@@ -2,7 +2,7 @@
   "name": "pokedex-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://romaniaph.github.io/react-pokedex",
+  "homepage": "https://romaniaph.github.io/React-Pokedex",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
